Text size update

--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
         font-family: "Arial", sans-serif;
         text-align: center;
         padding: 100px;
-        margin: 0; /* Remove default margin to occupy the full screen */
-        overflow: hidden; /* Remove scroll bars */
       }
       h1 {
-        font-size: 8em; /* Adjust the font size to your preference */
-        margin: 0; /* Remove any default margin */
+        font-size: 3em;
       }
     </style>
   </head>
